force-app/main/default/objects/EYI_Lead_Enquiry__c/EYI_Lead_Enquiry__c.object-meta.xml
<CustomObject>
    <label>Lead Enquiry</label>
    <nameField>
        <label>Lead Entries Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Enquiries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>