force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/Created_and_LastModified_Time_Difference__c.field-meta.xml
<CustomField>
    <fullName>Created_and_LastModified_Time_Difference__c</fullName>
    <formula>If( DATEVALUE( CreatedDate ) == DATEVALUE( LastModifiedDate ),TIMEVALUE(LastModifiedDate ) - TIMEVALUE(CreatedDate ),10000 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created and LastModified Time Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>