force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/Date_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Date_Calculation__c</fullName>
    <formula>ROUND((NOW() - CreatedDate)* 24,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ageing Days in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>