force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/DNC__c.field-meta.xml
<CustomField>
    <fullName>DNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNC</label>
    <type>Checkbox</type>
</CustomField>