force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Active_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Active_Opportunity__c</fullName>
    <formula>IF( EYI_Total_Active_CIF__c &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Opportunity</label>
    <type>Checkbox</type>
</CustomField>