force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Address__c.field-meta.xml
<CustomField>
    <fullName>EYI_Address__c</fullName>
    <label>Address</label>
    <type>Address</type>
</CustomField>