force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Age_group__c.field-meta.xml
<CustomField>
    <fullName>EYI_Age_group__c</fullName>
    <label>Age group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Age_Group</valueSetName>
    </valueSet>
</CustomField>