force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Agent__c.field-meta.xml
<CustomField>
    <fullName>EYI_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>