force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Alternate_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Alternate_Mobile_No__c</fullName>
    <label>Alternate Mobile No</label>
    <type>Phone</type>
</CustomField>