force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Area_Requirement_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Area_Requirement_sq_ft__c</fullName>
    <label>Area Requirement (sq. ft.)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>