force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_AutomationBypassDatetime__c.field-meta.xml
<CustomField>
    <fullName>EYI_AutomationBypassDatetime__c</fullName>
    <description>This is to start the time for automation, for bypassing the validations</description>
    <label>AutomationBypassDatetime</label>
    <type>DateTime</type>
</CustomField>