force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Budget__c.field-meta.xml
<CustomField>
    <fullName>EYI_Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Nature_of_Lead__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>EYI_Budget</valueSetName>
    </valueSet>
</CustomField>