force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Call_Log_Details__c.field-meta.xml
<CustomField>
    <fullName>EYI_Call_Log_Details__c</fullName>
    <description>This field is used to store all related call comments and details</description>
    <label>Call Log Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>