force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Campaign_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Name</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Lead Enquiries</relationshipLabel>
    <relationshipName>Lead_Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>