force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Client_Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>EYI_Client_Communication_Preference__c</fullName>
    <label>Client Communication Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Whats App</fullName>
                <isActive>false</isActive>
                <label>Whats App</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>