force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Company__c.field-meta.xml
<CustomField>
    <fullName>EYI_Company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>