force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Connected_Call_Count__c.field-meta.xml
<CustomField>
    <fullName>EYI_Connected_Call_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Connected Call Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>