force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Converted__c.field-meta.xml
<CustomField>
    <fullName>EYI_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>