force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Country_Code</valueSetName>
    </valueSet>
</CustomField>