force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Designation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Designation__c</fullName>
    <label>Designation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>