force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_DID_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_DID_Number__c</fullName>
    <label>DID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>