force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_DNC__c.field-meta.xml
<CustomField>
    <fullName>EYI_DNC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EYI DNC</label>
    <type>Checkbox</type>
</CustomField>