force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_DNC_by_Non_Contactable__c.field-meta.xml
<CustomField>
    <fullName>EYI_DNC_by_Non_Contactable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to uncheck the DNC field that was marked as DNC due to the customer being non-contactable. We mark the DNC field when a customer requests to be marked as DNC, or when the customer does not answer the call.</description>
    <label>DNC by Non Contactable</label>
    <type>Checkbox</type>
</CustomField>