force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_DND__c.field-meta.xml
<CustomField>
    <fullName>EYI_DND__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted In for DND</label>
    <type>Checkbox</type>
</CustomField>