force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>EYI_Follow_Up__c</fullName>
    <label>Follow Up</label>
    <type>DateTime</type>
</CustomField>