force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Inbound_L1_Escalation_Time__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inbound_L1_Escalation_Time__c</fullName>
    <description>This field is used to store the level 1 escalation time for inbound calls.</description>
    <label>Inbound L1 Escalation Time</label>
    <type>DateTime</type>
</CustomField>