force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Inbound_L2_Escalation_Time__c.field-meta.xml
<CustomField>
    <fullName>EYI_Inbound_L2_Escalation_Time__c</fullName>
    <description>This field is used to store the escalation time for level 2 for inbound calls.</description>
    <label>Inbound L2 Escalation Time</label>
    <type>DateTime</type>
</CustomField>