force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Is_Activity_Performed_Within_Time__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Activity_Performed_Within_Time__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Activity Performed Within Time</label>
    <type>Checkbox</type>
</CustomField>