force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Is_Lead_Enquiry_is_New__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Lead_Enquiry_is_New__c</fullName>
    <description>This field is used to check weather Lead enquiry is new or Existing!</description>
    <formula>IF(
    TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp; 
    TEXT(MONTH(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp; 
    TEXT(DAY(DATEVALUE(CreatedDate))) &amp; &quot; &quot; &amp; 
    MID(TEXT(CreatedDate), 12, 2) =
    TEXT(YEAR(DATEVALUE(EYI_Parent_Record__r.CreatedDate))) &amp; &quot;-&quot; &amp; 
    TEXT(MONTH(DATEVALUE(EYI_Parent_Record__r.CreatedDate))) &amp; &quot;-&quot; &amp; 
    TEXT(DAY(DATEVALUE(EYI_Parent_Record__r.CreatedDate))) &amp; &quot; &quot; &amp; 
    MID(TEXT(EYI_Parent_Record__r.CreatedDate), 12, 2),
    &quot;New&quot;,
    &quot;Existing&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lead Enquiry is New?</label>
    <type>Text</type>
</CustomField>