force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Is_Lead_Source_Change__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Lead_Source_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Lead source changed by Admin, then this check box become checked.</description>
    <label>Is Lead Source Change</label>
    <type>Checkbox</type>
</CustomField>