force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_IsAutomationBypassed__c.field-meta.xml
<CustomField>
    <fullName>EYI_IsAutomationBypassed__c</fullName>
    <description>This to check the automation datetime for 5 secs</description>
    <formula>EYI_AutomationBypassDatetime__c  &gt; NOW()  -  0.00005787037</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsAutomationBypassed</label>
    <type>Checkbox</type>
</CustomField>