force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Lead_Enquiry_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Enquiry_Number__c</fullName>
    <displayFormat>LE-{00000}</displayFormat>
    <label>Lead Enquiry No</label>
    <type>AutoNumber</type>
</CustomField>