force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Lead_Entry_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Entry_Remarks__c</fullName>
    <label>Lead Entry Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>