force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Lead_Generation_Medium__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Generation_Medium__c</fullName>
    <label>Lead Generation Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk uploads</fullName>
                <label>Bulk Uploads</label>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>Web leads</fullName>
                <label>Web Leads</label>
            </value>
            <value>
                <fullName>Manually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>