force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Lead_Lost_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Lost_Other_Reason__c</fullName>
    <label>Lead Lost Reason - Other</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Lost_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board-line Number</fullName>
                <label>Board-Line Number</label>
            </value>
            <value>
                <fullName>Cancelled the Plan</fullName>
                <label>Cancelled The Plan</label>
            </value>
            <value>
                <fullName>Casual Enquiry</fullName>
            </value>
            <value>
                <fullName>Client has passed away</fullName>
                <label>Client Has Passed Away</label>
            </value>
            <value>
                <fullName>Every time disconnects the Call on opening</fullName>
                <label>Every Time Disconnects The Call On Opening</label>
            </value>
            <value>
                <fullName>Irrelevent Enquiry</fullName>
            </value>
            <value>
                <fullName>ISD Number</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Lost - PT</fullName>
            </value>
            <value>
                <fullName>Never Enquired</fullName>
            </value>
            <value>
                <fullName>Shifted to Other City</fullName>
                <label>Shifted To Other City</label>
            </value>
            <value>
                <fullName>Spoke to Third Party</fullName>
                <label>Spoke To Third Party</label>
            </value>
            <value>
                <fullName>Vastu Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>