force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Lead_Lost_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Lost_Remarks__c</fullName>
    <label>Lead Lost Remarks</label>
    <type>TextArea</type>
</CustomField>