force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advertisement</fullName>
                <isActive>false</isActive>
                <label>Advertisement</label>
            </value>
            <value>
                <fullName>Archive Leads</fullName>
                <isActive>false</isActive>
                <label>Archive Leads</label>
            </value>
            <value>
                <fullName>ChatBot</fullName>
            </value>
            <value>
                <fullName>Cold Calling</fullName>
                <isActive>false</isActive>
                <label>Cold Calling</label>
            </value>
            <value>
                <fullName>Core Leads</fullName>
                <isActive>false</isActive>
                <label>Core Leads</label>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
                <isActive>false</isActive>
                <label>Database</label>
            </value>
            <value>
                <fullName>Databases</fullName>
                <isActive>false</isActive>
                <label>Databases</label>
            </value>
            <value>
                <fullName>Digital Media</fullName>
                <isActive>false</isActive>
                <label>Digital Media</label>
            </value>
            <value>
                <fullName>Direct</fullName>
                <isActive>false</isActive>
                <label>Direct</label>
            </value>
            <value>
                <fullName>Direct Client</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
                <isActive>false</isActive>
                <label>Employee Referral</label>
            </value>
            <value>
                <fullName>Employee Referral Scheme</fullName>
                <isActive>false</isActive>
                <label>Employee Referral Scheme</label>
            </value>
            <value>
                <fullName>Exhibition</fullName>
                <isActive>false</isActive>
                <label>Exhibition</label>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
                <isActive>false</isActive>
                <label>External Referral</label>
            </value>
            <value>
                <fullName>EYI Contact Center</fullName>
                <isActive>false</isActive>
                <label>EYI Contact Center</label>
            </value>
            <value>
                <fullName>IVR</fullName>
                <isActive>false</isActive>
                <label>IVR</label>
            </value>
            <value>
                <fullName>Lead Reference</fullName>
                <isActive>false</isActive>
                <label>Lead Reference</label>
            </value>
            <value>
                <fullName>Lost Leads</fullName>
                <isActive>false</isActive>
                <label>Lost Leads</label>
            </value>
            <value>
                <fullName>Loyalty</fullName>
                <isActive>false</isActive>
                <label>Loyalty</label>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Mobile App</fullName>
            </value>
            <value>
                <fullName>Newspaper Ad</fullName>
                <isActive>false</isActive>
                <label>Newspaper Ad</label>
            </value>
            <value>
                <fullName>OOH</fullName>
                <isActive>false</isActive>
                <label>OOH</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outdoor Activation</fullName>
                <isActive>false</isActive>
                <label>Outdoor Activation</label>
            </value>
            <value>
                <fullName>Partner</fullName>
                <isActive>false</isActive>
                <label>Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>