force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Visit Proposed</fullName>
            </value>
            <value>
                <fullName>Visit Confirmed</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Non-contactable</fullName>
                <label>Non-Contactable</label>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>REC</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
                <isActive>false</isActive>
                <label>Converted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>