force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Lead_Sub_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lead_Sub_Source_Type__c</fullName>
    <label>Lead Sub Source Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>