force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_LeadType__c.field-meta.xml
<CustomField>
    <fullName>EYI_LeadType__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>FnB</fullName>
            </value>
            <value>
                <fullName>Office Unit</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>