force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Linkedin_Profile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Linkedin_Profile__c</fullName>
    <description>This is use to store Linkedin Profile URL</description>
    <label>Linkedin Profile</label>
    <type>Url</type>
</CustomField>