force-app/main/default/objects/EYI_Lead_Enquiry__c/fields/EYI_Lost_Lead__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lost_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost Lead</label>
    <type>Checkbox</type>
</CustomField>